5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1559.log
== TEST (2019-04-11 19:16:38) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.Ada Lovelace foi a programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(frase.Ada Lovelace foi a programadora da historia.upper)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:07) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia.(upper))
-- ERROR:
File "XXXX", line 2
    print(frase.("Ada Lovelace foi a programadora da historia.(upper))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:34) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print(frase.("Ada Lovelace foi a programadora da historia.upper()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:17:40) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia.upper()
-- EXECUTION TIME:
0.105231
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase.("Ada Lovelace foi a programadora da historia.upper()
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:43) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print(frase.("Ada Lovelace foi a programadora da historia.upper()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:59) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia".upper()
-- ERROR:
File "XXXX", line 2
    print(frase.("Ada Lovelace foi a programadora da historia".upper()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:45) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase.("Ada Lovelace foi a programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print(frase.("Ada Lovelace foi a programadora da historia.upper()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:18:57) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase("Ada Lovelace foi a programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print(frase("Ada Lovelace foi a programadora da historia.upper()
                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:20:32) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frase("Ada Lovelace foi a programadora da historia.upper(Ada Lovelace foi a primeira programadora da historia)
-- ERROR:
File "XXXX", line 2
    print(frase("Ada Lovelace foi a programadora da historia.upper(Ada Lovelace foi a primeira programadora da historia)
                                                                                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:22:11) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print("Ada Love foi a primeira programadora da historia. upper()")
-- OUTPUT:
Ada Love foi a primeira programadora da historia. upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:22:38) 
-- CODE:
frase = "Ada Love foi a primeira programadora da historia."
print(frease.("Ada Love foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frease.("Ada Love foi a primeira programadora da historia. upper()"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:23:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:23:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.197404
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()"
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:23:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease("Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 3
    
                                                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:23:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease("Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.170424
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 3
    
                                                                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:23:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease=("Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 3
    
                                                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:15) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()")
-- ERROR:
File "XXXX", line 2
    print(frease.("Ada Lovelance foi a primeira programadora da historia. upper()")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:24:27) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:24:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.193367
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:12:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:12:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frease."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:13:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase."Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(frase."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:13:15) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase."Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.156753
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:14:15) 
-- CODE:
fra = "Ada Lovelace foi a primeira programadora da historia."
print(fra."Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 2
    print(fra."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:14:20) 
-- CODE:
fra = "Ada Lovelace foi a primeira programadora da historia."
print(fra."Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.268955
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(fra."Ada Lovelance foi a primeira programadora da historia. upper()"
                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:14:46) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase "Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:14:48) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase "Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.198423
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:21:03) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
print(frase "Ada Lovelance foi a primeira programadora da historia. upper()"
-- ERROR:
File "XXXX", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:21:07) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
print(frase "Ada Lovelance foi a primeira programadora da historia. upper()"
-- EXECUTION TIME:
0.145541
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:22:25) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print("frase.upper())
print("frase.lawer()"
-- ERROR:
File "XXXX", line 2
    print("frase.upper())
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:22:28) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print("frase.upper())
print("frase.lawer()"
-- EXECUTION TIME:
0.151938
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print("frase.upper())
                        ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:31:25) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:31:28) 
-- CODE:
frase ="Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.165991
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
